--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,12 @@ body {
     text-wrap: balance;
   }
 }
+
+nav {
+  padding: 10px;
+  background-color: bisque;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #333;
+}
